@@ -209,7 +209,7 @@ protected:
      */
     virtual void     SaveData() {}
     quint32          DNumber(const QString &baseName) const;
-    QString          GetNodeName(const VPieceNode &node, bool showDetails = false) const;
+    QString          GetNodeName(const VPieceNode &node, bool showPassmarkDetails = false) const;
     void             NewNodeItem(QListWidget *listWidget, const VPieceNode &node, bool showPassmark = true);
 
     void             InitNodeAngles(QComboBox *box);
