@@ -48,6 +48,7 @@
 - [#967] Variable must not include new line character.
 - German translation for Inno setup script.
 - [#971] Group operation do not work with VCubicBezierPath.
+- Regression in method DialogTool::GetNodeName.
 
 # Version 0.6.1 October 23, 2018
 - [#885] Regression. Broken support for multi size measurements.
